test(fixes): restore authenticated context and nullable-list coverage in notification/global model tests